# flaneur

./: .gitignore  README.md  env.js  freesound.js  index.html  main.js  shader.js  strudel.js  styles.css
commander/: commands.py  embeddings.py  main.py  pyproject.toml
sharawadji/: sound.js
speech-server/: index.js  package-lock.json  package.json
